Rename Exorcism Scroll to Purify Scroll

--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -1103,7 +1103,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>Exorcism Scroll</td>
+                <td>Purify Scroll</td>
                 <td>☆</td>
                 <td>☆</td>
                 <td>☆</td>
