--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -529,7 +529,7 @@
             <tr>
               <td class="seal_table_equipment">祓</td>
               <td>×</td>
-              <td>Holy Shield<br>Exorcism Scroll</td>
+              <td>Holy Shield<br>Purify Scroll</td>
               <td>Blocks Straw Voodoll family monsters from cursing your items.<br>Also prevents transferring of the 呪 seal (curse) if you synthetize a cursed shield.<br>Most players only synthesize it when they find Scout or Phantasm bracelets.</td>
             </tr>
             <tr>
@@ -1042,7 +1042,7 @@
               <td>×</td>
             </tr>
             <tr>
-              <td>Exorcism Scroll</td>
+              <td>Purify Scroll</td>
               <td rowspan="6">1000</td>
               <td rowspan="6">500</td>
               <td>○</td>
@@ -1556,7 +1556,7 @@
           <p>If a Trader isn't present on the current floor, and you've either eaten Sight Grass or have checked for traps,<br>you can place important items on the ground to avoid having them turned into Large Riceballs while you explore.<br>Don't place them near Landmines or Pitfalls, though, since a Tiger Tosser may cause an accident.</p>
           <p>It's ideal to make riceballs and synthesize on 9F, because 10F has a set terrain pattern of either 8-rooms or 12-rooms,<br>making for very small room sizes and lots of hallways, along with new monsters that have stronger attacks.</p>
           <h4 id="floor_9_12_monsters">Monsters</h4>
-          <p>It's best not to dash inside rooms on these floors so that monsters don't get to act before you.<br>Straw Voodoll (9~10F) can curse your shield, making synthesis difficult.<br>You can block curses with a Holy Shield, or by having the 祓 seal synthesized onto your shield from an Exorcism Scroll.<br>Worst case scenario, you can have Kengo unequip a cursed shield between 11~12F.</p>
+          <p>It's best not to dash inside rooms on these floors so that monsters don't get to act before you.<br>Straw Voodoll (9~10F) can curse your shield, making synthesis difficult.<br>You can block curses with a Holy Shield, or by having the 祓 seal synthesized onto your shield from a Purify Scroll.<br>Worst case scenario, you can have Kengo unequip a cursed shield between 11~12F.</p>
           <p>Monsters begin to hit harder from 10F with the appearance of monsters like Ironhead, Golem, and Kengo (11~12F).<br>Either unequip your shield beforehand, or fight Kengo with your back against a wall to avoid losing your shield.</p>
           <p>Try to clear out Monster Houses when possible to obtain more items.<br>However, Special Monster Houses can appear starting on 12F, so avoid them if you see one.<br>Encountering a Porkton or Typhoon this early in the dungeon would ensure the end of your adventure.</p>
           <h4 id="floor_9_12_other">Other Tips</h4>
@@ -1652,7 +1652,7 @@
           <p>Tiger Chucker can block off escape routes, throw ally monsters onto landmines, or Shiren into a Monster House, etc.<br>It's best to use arrows to defeat it from a distance, or swing a Seal Staff if you meet one in a hallway.<br>Tiger Chucker will be present for most of the dungeon from this point, all the way until 95F.</p>
           <h4 id="floor_50_59_more_items">Obtaining More Items</h4>
           <p>Despite the scary lineup of monsters, this floor range also offers some of the best opportunities to obtain items.</p>
-          <p>Mixergon (50~80F) makes an appearance, allowing you to synthesize items again.<br>However, a Mixergon that has swallowed 4 items is very powerful, so use Slow, Miss, or Quarter staves to weaken it.<br>Also, a <span class="dungeon_desc_warning">Copycat Mask family monster could be disguised as a Mixergon on any floor</span>, so don't throw your equipment first.<br>You can determine if it's a real Mixergon by shooting an arrow (swallows the arrow), or by swinging a Knowledge Staff.<br>It's possible to remove curses before or after synthesis without an Exorcism Scroll by posessing a Spiked Voodoll.</p>
+          <p>Mixergon (50~80F) makes an appearance, allowing you to synthesize items again.<br>However, a Mixergon that has swallowed 4 items is very powerful, so use Slow, Miss, or Quarter staves to weaken it.<br>Also, a <span class="dungeon_desc_warning">Copycat Mask family monster could be disguised as a Mixergon on any floor</span>, so don't throw your equipment first.<br>You can determine if it's a real Mixergon by shooting an arrow (swallows the arrow), or by swinging a Knowledge Staff.<br>It's possible to remove curses before or after synthesis without a Purify Scroll by posessing a Spiked Voodoll.</p>
           <p>Menbell (53~70F) makes an appearance, and is the key to collecting additional items.<br>Use Menbell to obtain Iron Arrows, and lower its level to obtain Strength Grass from Mr. Drone. (see next section)<br>You might get lucky and obtain Revival Grass from a passing Mr. Gyro while hunting summoned monsters, too.</p>
           <p>Mr. Gyro (50~59F) makes an appearance, and has a 75% chance to drop Revival Grass when defeated.<br>Chase it down if you see one, as stocking up on Revival Grass greatly increases the chance of clearing this dungeon.<br>Mr. Gyro and Menbell overlap between 53~60F, so it's a great opportunity to hunt both Mr. Drones and Mr. Gyros.</p>
           <p>Cranky Tank (55~77F) makes an appearance, and deals a fixed 20 damage per cannonball explosion.<br>Bracelets have a higher chance of cracking from explosion damage, so be sure to unequip important ones,<br>especially if you don't have any Plating Scrolls on hand to repair cracked bracelets.<br>That said, bracelets never shatter from explosion damage, so you don't need to unequip cracked bracelets.<br>You can level down a Cranky Tank into a Boy Cart to collect Iron Arrows, if desired.</p>
@@ -1673,7 +1673,7 @@
     ■××□□□
     ■□□□□□
           </pre>
-          <p>However, be careful of the following:<br>・Kengo flinging your shield away. It's best to do this on 56~60F where Iai no longer appears.<br>・Straw Voodoll cursing your equipment. Either fill all synthesis slots, or keep an Exorcism Scroll on hand.<br>・Tiger Tosser throwing you onto visible traps. Use items like Water Pot, Trap Remove Scroll, or<br>Knockback Staff (aim it so the trap hits a monster) to erase the trap beforehand, especially if you see a Pitfall.</p>
+          <p>However, be careful of the following:<br>・Kengo flinging your shield away. It's best to do this on 56~60F where Iai no longer appears.<br>・Straw Voodoll cursing your equipment. Either fill all synthesis slots, or keep a Purify Scroll on hand.<br>・Tiger Tosser throwing you onto visible traps. Use items like Water Pot, Trap Remove Scroll, or<br>Knockback Staff (aim it so the trap hits a monster) to erase the trap beforehand, especially if you see a Pitfall.</p>
           <h3 id="floor_60_69">60~69F</h3>
           <p>Projectile zone where Silver Arrows, Stones, and Bombs can fly at you from every direction.</p>
           <p>Monsters include Horse Shogun (57~73F), Horse Emperor (60~77F), Porkchop (56~71F), Porkton (60~72F),<br>Gorilla Bot (60~74F), Bear Borg (60~76F), Menbell (53~70F), and Bellthoven (60~75F).</p>
@@ -1685,7 +1685,7 @@
           <p>Lashaaga (70~87F) attacks three times per turn, dealing lots of damage and quickly shattering bracelets.<br>It's possible to weaken its attacks by splashing water on it using a Water Pot, since it has the Weapon element.<br>Lashaaga and Typhoon have the same attack stat, and both attack 3 times per turn, so fighting Lashaaga<br>gives you an idea how you'll fare against Typhoon later on.</p>
           <p>Shihan (74~90F) makes an appearance. <strong>Losing your weapon or shield here likely means the end of your run</strong>,<br>so prioritize moving in ways that prevents your equipment from getting flung, using staves as needed.<br>It's good to keep Evaporate, Freeze, and Wall Collapse scrolls on hand in case your equipment falls in water.<br>Consider throwing an Extiction Scroll at Shihan if you have one on hand.<br>If you don't have any of these items, it's recommended to rush to the stairs to minimize risk.</p>
           <p>Boulder Beast (75~89F) can tackle Shiren, knocking him away and paralyzing him for 3 turns.<br>Diagonal knockback won't break walls, leaving you paralyzed in the open. It's even worse if a Shihan is nearby.<br>You'll want to avoid fighting it inside shops, in case you're sent outside of the shop while holding merchandise.</p>
-          <p>The classic power type monster of the series, Minotaur (78~85F), also makes an appearance.<br>It has a 25% chance to deal a x1.4 damage critical hit, but can be weakened by splashing water using a Water Pot.<br>Mixergon appears alongside Minotaur between 78~80F, so you might be able to synthesize a Minotaur's Axe<br>if you're lucky enough to get the drop (10% chance), greatly increasing your damage output.<br>However, it might not be worth the trouble of using items such as Synthesis Pot, Blank Scroll, and Exorcism Scroll<br>to synthesize it, if you have enough strength already or have a good number of staves on hand.</p>
+          <p>The classic power type monster of the series, Minotaur (78~85F), also makes an appearance.<br>It has a 25% chance to deal a x1.4 damage critical hit, but can be weakened by splashing water using a Water Pot.<br>Mixergon appears alongside Minotaur between 78~80F, so you might be able to synthesize a Minotaur's Axe<br>if you're lucky enough to get the drop (10% chance), greatly increasing your damage output.<br>However, it might not be worth the trouble of using items such as Synthesis Pot, Blank Scroll, and Purify Scroll<br>to synthesize it, if you have enough strength already or have a good number of staves on hand.</p>
           <p>Mixergons won't be available past 80F, so wrap up any synthesis you need before proceeding past that floor.</p>
           <p>N'dubba 60yr (80~94F) moves at double speed, and hits as hard as Gigahead or Megataur when both hits connect.<br>It might be best to assume all items on the floor are N'dubbas at this point, to avoid getting hit by surprise attacks.<br>Safely check for N'dubbas by having an ally monster stand on top of an item, and then switching places with it.</p>
           <p>The merchandise table for shops changes from 71F. Be extremely cautious of unidentified grasses from this point.<br>A 400G grass could be a Super Unlucky Seed, which lowers your level back down to 1, likely ending your adventure.<br>Upgrade Pot can now be seen in shops, so go ahead and read Restock Scrolls if you're trying to obtain one.<br>However, you might want to see if you come across a Pot Specialty Shop before doing so.<br>Also keep in mind that shops can only be found until 90F inside this dungeon.</p>
@@ -5406,7 +5406,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>Exorcism Scroll</td>
+                <td>Purify Scroll</td>
                 <td>☆</td>
                 <td>☆</td>
                 <td>☆</td>
