--- a/html/dungeon/shuten_trail_easy.html
+++ b/html/dungeon/shuten_trail_easy.html
@@ -306,7 +306,7 @@
               <td>Identifies unidentified items. Not needed for Shuten Trail Easy.</td>
             </tr>
             <tr>
-              <td>Exorcism Scroll</td>
+              <td>Purify Scroll</td>
               <td>1000</td>
               <td>Removes curses from equipment. Not needed for Shuten Trail Easy.</td>
             </tr>
@@ -743,7 +743,7 @@
                 <th>F</th>
                 <th>P</th>
                 <th>M</th>
-                <td>Exorcism Scroll</td>
+                <td>Purify Scroll</td>
                 <td></td>
                 <td>☆</td>
                 <td></td>
