--- a/html/item/price_chart.html
+++ b/html/item/price_chart.html
@@ -68,7 +68,7 @@
                   <td>-</td>
                 </tr>
                 <tr>
-                  <td><a href="/shiren2/html/item/scroll.html#exorcism_scroll">Exorcism Scroll</a></td>
+                  <td><a href="/shiren2/html/item/scroll.html#exorcism_scroll">Purify Scroll</a></td>
                   <td>祓</td>
                   <td rowspan="6">1000</td>
                   <td rowspan="6">500</td>
