--- a/html/system/seal.html
+++ b/html/system/seal.html
@@ -362,7 +362,7 @@
             <td>×</td>
             <td>500</td>
             <td>250</td>
-            <td>Exorcism Scroll</td>
+            <td>Purify Scroll</td>
             <td class="text_left">Weapon cannot be cursed, even from synthesizing a cursed weapon.<br>Synthesizing this seal onto a weapon with 呪 removes the curse,<br>but the weapon won't gain a 祓 seal afterward.<br>This seal vanishes if transferred to a different weapon.</td>
           </tr>
           <tr>
@@ -403,7 +403,7 @@
             <td>0</td>
             <td>0</td>
             <td>Unlucky Seed<br>Super Unlucky Seed</td>
-            <td class="text_left">The weapon cannot be unequipped.<br>The curse can be removed by reading an Exorcism Scroll.</td>
+            <td class="text_left">The weapon cannot be unequipped.<br>The curse can be removed by reading a Purify Scroll.</td>
           </tr>
         </table>
         <h3 id="seal_list_shield">Shield</h3>
@@ -661,7 +661,7 @@
             <td>×</td>
             <td>500</td>
             <td>250</td>
-            <td>Exorcism Scroll</td>
+            <td>Purify Scroll</td>
             <td class="text_left">Prevents all weapons, shields, and bracelets from being cursed.<br>Shield cannot be cursed, even from synthesizing a cursed shield.<br>Synthesizing this seal onto a shield with 呪 removes the curse,<br>but the shield won't gain a 祓 seal afterward.<br>This seal vanishes if transferred to a different shield.</td>
           </tr>
           <tr>
@@ -702,7 +702,7 @@
             <td>0</td>
             <td>0</td>
             <td>Unlucky Seed<br>Super Unlucky Seed</td>
-            <td class="text_left">The shield cannot be unequipped.<br>The curse can be removed by reading an Exorcism Scroll.</td>
+            <td class="text_left">The shield cannot be unequipped.<br>The curse can be removed by reading a Purify Scroll.</td>
           </tr>
         </table>
         <h2 id="stacked_effects">Stacked Effects</h2>
@@ -1692,7 +1692,7 @@
           <tr>
             <td class="seal_scroll">祓</td>
             <td>×</td>
-            <td>Exorcism Scroll</td>
+            <td>Purify Scroll</td>
             <td></td>
           </tr>
           <tr>
@@ -1776,7 +1776,7 @@
           <tr>
             <td class="seal_scroll">祓</td>
             <td>×</td>
-            <td>Exorcism Scroll</td>
+            <td>Purify Scroll</td>
             <td></td>
           </tr>
           <tr>
