--- a/html/dungeon/sealed_room.html
+++ b/html/dungeon/sealed_room.html
@@ -2705,7 +2705,7 @@
                 <td>☆</td>
                 <td></td>
                 <td></td>
-                <td>Exorcism Scroll</td>
+                <td>Purify Scroll</td>
                 <td>☆</td>
                 <td>☆</td>
                 <td></td>
