--- a/html/dungeon/shuten_trail_hard.html
+++ b/html/dungeon/shuten_trail_hard.html
@@ -775,7 +775,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>Exorcism Scroll</td>
+                <td>Purify Scroll</td>
                 <td>☆</td>
                 <td>☆</td>
                 <td></td>
