--- a/html/dungeon/shuten_trail_mid.html
+++ b/html/dungeon/shuten_trail_mid.html
@@ -578,7 +578,7 @@
                 <td></td>
                 <td></td>
                 <td>☆</td>
-                <td>Exorcism Scroll</td>
+                <td>Purify Scroll</td>
                 <td>☆</td>
                 <td>☆</td>
                 <td>☆</td>
