working on the seals page

--- a/html/system/seal.html
+++ b/html/system/seal.html
@@ -46,7 +46,7 @@
               <li>
                 <a href="#popular_seals_weapon">Weapon</a>
                 <ul>
-                  <li><a href="#minotaur_vs_type">Minotaur's Axe vs. Monster Type Weapons</a></li>
+                  <li><a href="#minotaur_vs_type">Minotaur's Axe vs. Type Effective Weapons</a></li>
                 </ul>
               </li>
               <li>
@@ -1490,113 +1490,134 @@
             <td class="seal_equipment">仏</td>
             <td>○</td>
             <td>Ghost Sickle</td>
-            <td></td>
+            <td class="text_left">Lets you defeat strong opponents like Gale and Bone Dragon family monsters in fewer turns,<br>along with Pumphantasm family monsters which can be troublesome if they go inside walls.</td>
           </tr>
           <tr>
             <td class="seal_equipment">ド</td>
             <td>○</td>
             <td>Drain Buster</td>
-            <td></td>
+            <td class="text_left">Defeating Drain type monsters in one turn prevents the loss of level, strength, fullness, etc.</td>
           </tr>
           <tr>
             <td class="seal_equipment">目</td>
             <td>○</td>
             <td>Cyclops Killer</td>
-            <td></td>
+            <td class="text_left">Effective against high defense Golem and Ironhead family monsters.<br>Also effective against Gazer family monsters, but not too important if you have the 山 seal.</td>
           </tr>
           <tr>
             <td class="seal_equipment">竜</td>
             <td>○</td>
-            <td>Dragon Shield</td>
-            <td></td>
+            <td>Dragon Killer</td>
+            <td class="text_left">Dragon types are tough to take on at close range, so having this seal helps.</td>
           </tr>
           <tr>
             <td class="seal_equipment">龍</td>
             <td>○</td>
             <td>Ryujin Sword</td>
-            <td></td>
+            <td class="text_left">Stronger version of 竜.</td>
           </tr>
           <tr>
             <td class="seal_equipment">必</td>
             <td>×</td>
             <td>Homing Blade</td>
-            <td></td>
+            <td class="text_left">Makes it easier to calculate how many turns it will take to defeat a monster.<br>Likely first or second place in terms of weapon seal popularity.</td>
           </tr>
           <tr>
             <td class="seal_equipment">三</td>
             <td>×</td>
             <td>Razor Wind</td>
-            <td></td>
+            <td class="text_left">Lets you get the first hit in around corners, and plays well with Scout Bracelet.</td>
           </tr>
           <tr>
             <td class="seal_equipment">回</td>
             <td>×</td>
             <td>Healing Sword</td>
-            <td></td>
+            <td class="text_left">Fantastic for restoing HP. This seal alone can drastically change the difficulty of a dungeon.</td>
           </tr>
           <tr>
             <td class="seal_equipment">サ</td>
             <td>×</td>
             <td>Wonder Pickaxe</td>
-            <td></td>
+            <td class="text_left">Dig shortcuts or steal from shops without the worry of the weapon breaking.</td>
           </tr>
           <tr>
             <td class="seal_equipment">会</td>
             <td>○</td>
             <td>Minotaur's Axe</td>
-            <td></td>
+            <td class="text_left">Critical hits aren't consistent, but it's a way to increase damage against all monsters.</td>
           </tr>
           <tr>
             <td class="seal_grass">飯</td>
             <td>○</td>
             <td>Riceballs<br>(Not spoiled)</td>
-            <td></td>
+            <td class="text_left">Using it with 皮 nearly guarantees that you won't collapse from starvation.<br>You might become annoyed at the number of Riceball drops after a while.</td>
           </tr>
           <tr>
             <td class="seal_grass">弟</td>
             <td>○</td>
             <td>Otogiriso</td>
-            <td></td>
+            <td class="text_left">Use it alongside 回 to restore more HP. Plays well with Phantasm Bracelet.</td>
           </tr>
           <tr>
             <td class="seal_grass">幸</td>
             <td>○</td>
             <td>Happy Grass</td>
-            <td></td>
+            <td class="text_left">Often stacked on a secondary weapon that is used to level up early game.</td>
           </tr>
           <tr>
             <td class="seal_grass">天</td>
             <td>○</td>
             <td>Angel Seed</td>
-            <td></td>
+            <td class="text_left">Stronger version of 幸, but Angel Seeds are quite rare.</td>
           </tr>
           <tr>
             <td class="seal_grass">火</td>
             <td>○</td>
             <td>Flame Grass<br>Dragon Grass</td>
-            <td></td>
+            <td class="text_left">Useful as a projectile that never runs out, but only deals a fixed 10 damage.<br>The fire attack animation is long, so the tempo of the game slows down.<br>Not recommended to have equipped when checking for traps.</td>
           </tr>
           <tr>
             <td class="seal_scroll">帰</td>
             <td>×</td>
             <td>Retreat Scroll</td>
-            <td></td>
+            <td class="text_left">Nice to have if you're worried about losing your weapon.<br>Remember, the seal won't take effect if the weapon is inside a pot.</td>
           </tr>
           <tr>
             <td class="seal_scroll">眠</td>
             <td>○</td>
             <td>Slumber Scroll</td>
-            <td></td>
+            <td class="text_left">Decent option for weaker weapons that struggle to defeat enemies in one hit.</td>
           </tr>
           <tr>
             <td class="seal_scroll">金</td>
             <td>×</td>
             <td>Plating Scroll</td>
-            <td></td>
+            <td class="text_left">Protects other seals from one use of Monsoon Doll's special attack.<br>Needed to protect against the loss of upgrade value due to rust.</td>
           </tr>
         </table>
-        <h4 id="minotaur_vs_type">Minotaur's Axe vs. Monster Type Weapons</h4>
-        <p>Text</p>
+        <h4 id="minotaur_vs_type">Minotaur's Axe vs. Type Effective Weapons</h4>
+        <p>The quick answer is that it comes down to play style and opinion, rather than one being strictly better.<br>Type effective seals are guaranteed to deal more damage against a selection of monsters,<br>while the 会 seal has the potential to deal more damage against all monsters.</p>
+        <dl>
+          <dt>Minotaur's Axe</dt>
+          <dd></dd>
+        </dl>
+        <ul>
+          <li>(+) Increase damage against all monsters.</li>
+          <li>(+) With enough luck, you can land critical hits without many 会 seals.</li>
+          <li>(-) Chance is based on the number of 会 seals. 14 seals = 100%, but it's likely not worth that amount of investment.</li>
+          <li>(-) Minotaur and Megataur only appear toward the end of post-game dungeons, so it's difficult to obtain.</li>
+        </ul>
+        <dl>
+          <dt>Type Effective (Ghost Sickle, Drain Buster, Cyclops Killer, Crescent Arm, Dragon Killer, Ryujin Sword)</dt>
+          <dd></dd>
+        </dl>
+        <ul>
+          <li>(+) Guaranteed to increase damage against a selection of monsters.</li>
+          <li>(+) One seal is enough to start seeing effective results.</li>
+          <li>(-) Some monsters like Kengo cannot be targeted by these seals, giving an advantage to the 会 seal.</li>
+          <li>(-) Each selection of monsters takes up its own seal slot that could be used for other seals.</li>
+          <li>(-) The seal isn't useful on floors where strong monsters of the applicable type don't appear.</li>
+        </ul>
         <h3 id="popular_seals_shield">Shield</h3>
         <table class="table_seals">
           <tr>
@@ -1609,103 +1630,103 @@
             <td class="seal_equipment">サ</td>
             <td>×</td>
             <td>Nirvana Shield</td>
-            <td></td>
+            <td class="text_left">Stops hunger, therefore eliminating the need to carry riceballs.<br>Unnecessary if you have other ways to counteract hunger.<br>Can be troublesome if you lose the shield.</td>
           </tr>
           <tr>
             <td class="seal_equipment">皮</td>
             <td>○</td>
             <td>Leather Shield</td>
-            <td></td>
+            <td class="text_left">Slows hunger while it's equipped.</td>
           </tr>
           <tr>
             <td class="seal_equipment">見</td>
             <td>○</td>
             <td>Evasive Shield</td>
-            <td></td>
+            <td class="text_left">Increases the chance to evade enemy regular attacks.<br>Higher evasion means less damage toward bracelets.<br>Can be stacked to increase evasion further.</td>
           </tr>
           <tr>
             <td class="seal_equipment">山</td>
             <td>×</td>
             <td>Echo Shield</td>
-            <td></td>
+            <td class="text_left">Effectively makes you invincible to magic.</td>
           </tr>
           <tr>
             <td class="seal_equipment">身</td>
             <td>×</td>
             <td>Dodge Shield</td>
-            <td></td>
+            <td class="text_left">Lets you dodge all projectiles, including Silver Arrows.<br>Not effective against Wolf Droid family bombs or Pop Tank family cannonballs.<br>Easy to collect items after dodging them.</td>
           </tr>
           <tr>
             <td class="seal_equipment">祓</td>
             <td>×</td>
             <td>Holy Shield</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_equipment">ト</td>
             <td>×</td>
             <td>Walrus Shield</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_equipment">返</td>
             <td>×</td>
             <td>Reflect Shield</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_equipment">カ</td>
             <td>×</td>
             <td>Traproid Shield</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_equipment">爆</td>
             <td>○</td>
             <td>Blast Shield</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_equipment">竜</td>
             <td>○</td>
             <td>Dragon Shield</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_grass">弟</td>
             <td>○</td>
             <td>Otogiriso</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_grass">火</td>
             <td>○</td>
             <td>Flame Grass<br>Dragon Grass</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_scroll">帰</td>
             <td>×</td>
             <td>Retreat Scroll</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_scroll">祓</td>
             <td>×</td>
             <td>Purify Scroll</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_scroll">眠</td>
             <td>○</td>
             <td>Slumber Scroll</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_scroll">金</td>
             <td>×</td>
             <td>Plating Scroll</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
         </table>
         <h4 id="reflect_vs_dodge">Reflect Shield vs. Dodge Shield</h4>
@@ -1723,67 +1744,67 @@
             <td class="seal_equipment">掘</td>
             <td>×</td>
             <td>Pickaxe</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_equipment">食</td>
             <td>×</td>
             <td>Gobo</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_equipment">ケ</td>
             <td>×</td>
             <td>Kengo's Katana</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_equipment">ス</td>
             <td>×</td>
             <td>Spark Sword</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_equipment">捨</td>
             <td>×</td>
             <td>Disposable Sword</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_equipment">木</td>
             <td>×</td>
             <td>Mallet</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_grass">ち</td>
             <td>○</td>
             <td>Strength Grass</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_grass">不</td>
             <td>○</td>
             <td>Unlucky Seed</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_grass">超</td>
             <td>×</td>
             <td>Super Unlucky Seed</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_scroll">祓</td>
             <td>×</td>
             <td>Purify Scroll</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_scroll">銀</td>
             <td>×</td>
             <td>Silver Arrow</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
         </table>
         <h3 id="seals_caution_shield">Shield</h3>
@@ -1798,97 +1819,97 @@
             <td class="seal_equipment">サ</td>
             <td>×</td>
             <td>Nirvana Shield</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_equipment">見</td>
             <td>○</td>
             <td>Evasive Shield</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_equipment">う</td>
             <td>×</td>
             <td>Scale Shield</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_equipment">バ</td>
             <td>○</td>
             <td>Counter Shield</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_equipment">幸</td>
             <td>○</td>
             <td>Happy Grass</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_equipment">銭</td>
             <td>○</td>
             <td>Gamarra Shield</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_equipment">重</td>
             <td>×</td>
             <td>Heavy Shield</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_equipment">捨</td>
             <td>×</td>
             <td>Disposable Shield</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_grass">飯</td>
             <td>○</td>
             <td>Riceballs<br>(Not spoiled)</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_grass">消</td>
             <td>×</td>
             <td>Antidote Grass</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_grass">命</td>
             <td>○</td>
             <td>Life Grass</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_grass">幸</td>
             <td>○</td>
             <td>Happy Grass</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_grass">天</td>
             <td>○</td>
             <td>Angel Seed</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_grass">不</td>
             <td>○</td>
             <td>Unlucky Seed</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_grass">超</td>
             <td>×</td>
             <td>Super Unlucky Seed</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
           <tr>
             <td class="seal_scroll">銀</td>
             <td>×</td>
             <td>Silver Arrow</td>
-            <td></td>
+            <td class="text_left"></td>
           </tr>
         </table>
       </div>
